--- a/sass/layout/_breadcrumbs.scss
+++ b/sass/layout/_breadcrumbs.scss
@@ -18,8 +18,6 @@
     flex-wrap: wrap;
   }
   @include desktop {
-    display: flex;
-    flex-wrap: wrap;
     margin-right: -30px;
     margin-bottom: -30px;
     margin-left: 0px;
@@ -30,15 +28,20 @@
   flex-basis: calc(100% / 3 - 30px);
   .list:hover,
   .list:focus {
+    &:hover,
+    &:focus {
+      .breadcrumbs__about {
+        transform: translateY(0);
+      }
+    }
     display: block;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  &:hover .breadcrumbs__about {
-    transform: translateY(0);
-  }
+  // &:hover .breadcrumbs__about {
+  //   transform: translateY(0);
+  // }
   &:not(:nth-child(10n)) {
-    // margin-right: 30px;
     margin-bottom: 30px;
   }
   @include tablet {
