--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -28,32 +28,19 @@
   padding-bottom: 30px;
 }
 .team__flex-element {
-  // @media screen and(max-width:768px) {
-  //   &:last-child {
-  //     margin-bottom: 0px;
-  //   }
-  // }
-  margin-bottom: 30px;
   display: inline-block;
   background-color: $primary-bg-color;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-@include tablet {
-  .team__flex-element:nth-child(2n + 1) {
-    margin-right: 30px;
-  }
-}
-@include desktop {
-  .team__flex-element:not(:last-child) {
-    margin-right: 30px;
-  }
-  .team__flex-element:not(:last-child) {
-    width: calc((100% - 90px) / 4);
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .team__flex-element {
+    width: calc((100% - 15px * 2) / 2);
   }
 }
 .team__list {
+  gap: 30px;
   display: flex;
   flex-wrap: wrap;
   @include desktop {
